Update Firebase configuration and add post-separation summary
- Update .firebaserc to use correct Firebase project ID (mixmi-66529)
- Add comprehensive post-separation summary document
- Document next steps for custom domain configuration
- Provide team onboarding instructions
- Include CI/CD setup requirements

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,26 +1,16 @@
 {
   "projects": {
-    "default": "mixmi-web-prod",
-    "staging": "mixmi-web-staging"
+    "default": "mixmi-66529",
+    "staging": "mixmi-66529"
   },
   "targets": {
-    "mixmi-web-prod": {
+    "mixmi-66529": {
       "hosting": {
         "mixmi-admin": [
-          "admin-mixmi-web-prod"
+          "mixmi-admin"
         ],
         "mixmi-landing": [
-          "landing-mixmi-web-prod"
-        ]
-      }
-    },
-    "mixmi-web-staging": {
-      "hosting": {
-        "mixmi-admin": [
-          "admin-mixmi-web-staging"
-        ],
-        "mixmi-landing": [
-          "landing-mixmi-web-staging"
+          "mixmi-landing"
         ]
       }
     }
