--- a/firebase.json
+++ b/firebase.json
@@ -62,6 +62,10 @@
       ],
       "rewrites": [
         {
+          "source": "/api/send-welcome",
+          "function": "sendWelcomeEmail"
+        },
+        {
           "source": "**",
           "destination": "/index.html"
         }
@@ -111,5 +115,12 @@
   },
   "storage": {
     "rules": "firebase/storage.rules"
+  },
+  "functions": {
+    "source": "functions",
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" install",
+      "npm --prefix \"$RESOURCE_DIR\" run build"
+    ]
   }
 }
