--- a/firebase.json
+++ b/firebase.json
@@ -113,6 +113,9 @@
     "rules": "firebase/firestore.rules",
     "indexes": "firebase/firestore.indexes.json"
   },
+  "database": {
+    "rules": "firebase/database.rules.json"
+  },
   "storage": {
     "rules": "firebase/storage.rules"
   },
