Add landing page favicons, update admin config, and add documentation

--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,24 @@
       ],
       "headers": [
         {
+          "source": "/favicon.@(svg|ico|png)",
+          "headers": [
+            {
+              "key": "Cache-Control",
+              "value": "public, max-age=0, must-revalidate"
+            }
+          ]
+        },
+        {
+          "source": "/apple-touch-icon.png",
+          "headers": [
+            {
+              "key": "Cache-Control",
+              "value": "public, max-age=0, must-revalidate"
+            }
+          ]
+        },
+        {
           "source": "**/*.@(js|css)",
           "headers": [
             {
@@ -71,6 +89,24 @@
         }
       ],
       "headers": [
+        {
+          "source": "/favicon.@(svg|ico|png)",
+          "headers": [
+            {
+              "key": "Cache-Control",
+              "value": "public, max-age=0, must-revalidate"
+            }
+          ]
+        },
+        {
+          "source": "/apple-touch-icon.png",
+          "headers": [
+            {
+              "key": "Cache-Control",
+              "value": "public, max-age=0, must-revalidate"
+            }
+          ]
+        },
         {
           "source": "**/*.@(js|css)",
           "headers": [
