--- a/landing/firebase.json
+++ b/landing/firebase.json
@@ -15,6 +15,24 @@
     ],
     "headers": [
       {
+        "source": "/favicon.@(svg|ico|png)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=0, must-revalidate"
+          }
+        ]
+      },
+      {
+        "source": "/apple-touch-icon.png",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=0, must-revalidate"
+          }
+        ]
+      },
+      {
         "source": "**",
         "headers": [
           {
