Fix superadmin user collection access issue
- Add token refresh before subscribing to real-time user updates
- Improve error handling with detailed diagnostics in fetchUsers
- Add error state management and UI feedback in Users component
- Fix token refresh sequence to ensure claims are present before DB access
- Add better error messages with actionable troubleshooting steps

--- a/functions/package.json
+++ b/functions/package.json
@@ -20,12 +20,13 @@
     "nodemailer": "^6.9.15"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "@types/nodemailer": "^6.4.15",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "rimraf": "^5.0.5",
-    "typescript": "^5.4.5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
-
