--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.27.4",
     "date-fns": "^4.1.0",
     "firebase": "^12.3.0",
+    "jszip": "^3.10.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4",
